--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  <%= favicon_link_tag %>
+   <%= favicon_link_tag('favicon.ico') %>
    
 </head>
 
@@ -248,9 +248,7 @@
   </div>
     
     
- 
-        
-    
+
   
     <!--メニュー左端-->
     <div id="menu">
@@ -283,12 +281,12 @@
             <% $categories.where(oyacategory_id: o.id).each do |c| %>
            
               
-              <p class="lv2btn"><%= c.name %> (<%= c.posts.count %>)  </p>
+              <p class="lv2btn"><%= c.name %> (<%= c.posttools.count %>)  </p>
               
                 <div class="lv2body">
                  
                   <% $tools.where(category_id: c.id).each do |t| %>
-                    <p class="lv2btn"><%= link_to"●#{t.name}", tool_path(t.id) %> (<%=t.posts.count %>) </p>
+                    <p class="lv2btn"><%= link_to"●#{t.name}", tool_path(t.id) %> (<%=t.posttools.count %>) </p>
                   <% end %>
 	              </div>
 
