--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -46,8 +46,8 @@
 
 
     <div class="field">
-    <%= f.label :twitter_account %><br />
-    <%= f.text_field :twitter_account,"twitterアカウント名" autocomplete: "off", :size=>"60" %>
+    <%= f.label :ツイッターのアカウント（次回からtwitterアカウントでログインしたい方） %><br />
+    <%= f.text_field :twitter_account  , :size=>"60" %>
   </div>
 
   <div class="actions">
