もういっかい

--- a/app/views/layouts/second_layout.html.erb
+++ b/app/views/layouts/second_layout.html.erb
@@ -64,7 +64,7 @@
 
            <div class="category_color<%=index%>">
             
-            <p class="lv1btn"><%= $o %>
+            <p class="lv1btn">
               
               <%= o.name %> (<%= o.posts_counts  %>) 
               
