--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -266,7 +266,7 @@
 
            <div class="category_color<%=index%>">
             
-            <p class="lv1btn"><%= o %>
+            <p class="lv1btn">
               
               <%= o.name %> (<%= o.posts_counts  %>) 
               
