もういっかい

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -281,7 +281,7 @@
             <% $categories.where(oyacategory_id: o.id).each do |c| %>
            
               
-              <p class="lv2btn"><%= c.name %> (<%= c.posttools.count %>)  </p>
+              <p class="lv2btn"><%= c.name %> (<%= c.post_tools_count %>)  </p>
               
                 <div class="lv2body">
                  
