本番環境でのpkエラーを修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,7 +118,7 @@
                    
                    </li>
                    
-                    <% if current_user.id == User.find(1).id %>
+                    <% if current_user.id == 1 %>
                        <li>   <a class="tool" href="/oyacategories/new">親カテゴリーをつくる</a>
                        </li>
                     
