--- a/app/assets/javascripts/preview.js.erb
+++ b/app/assets/javascripts/preview.js.erb
@@ -32,7 +32,7 @@ $(function(){
                   src: e.target.result,
                   width: "150px",
                   class: "preview_display0",
-                  title: file.name
+                  <%= image_path("file.name") %>
               }));
       };
     })(file);
